# Lucentia

./: README.md
Early Testing/: README.MD  readme.MD
Early Testing/Lucentia Alpha/Lucentia/backend/alembic/: env.py
Early Testing/Lucentia Alpha/Lucentia/backend/app/: crud.py  insights.py  main.py  schemas.py  settings.py
Early Testing/Lucentia Alpha/Lucentia/frontend/: index.html  package-lock.json
Early Testing/Lucentia v100-Alpha/: readme.MD
Early Testing/Lucentia v100-Alpha/Lucentia/backend/: docker-compose.yml
Early Testing/Lucentia v100-Alpha/Lucentia/frontend/: package.json
Early Testing/Lucentia v100-Bravo/Lucentia/: Dockerfile  alembic.ini  docker-compose.yml  requirements.txt
Early Testing/Lucentia v100-Bravo/Lucentia/alembic/: env.py
Early Testing/Lucentia v100-Bravo/Lucentia/app/: crud.py  insights.py  plaid_client.py  settings.py
Early Testing/Lucentia v100-Bravo/Lucentia/backend/: pyproject.toml
Early Testing/Lucentia v100-Bravo/Lucentia/backend/alembic/versions/: 20241114_01_add_plaid_items.py
Early Testing/Lucentia v100-Bravo/Lucentia/backend/app/: auth.py  database.py  demo_seed.py  insight_registry.py  main.py  models.py  schemas.py
Early Testing/Lucentia v100-Bravo/Lucentia/backend/scripts/: seed_bulk_users.py  seed_dli_users.py
Early Testing/Lucentia v100-Bravo/Lucentia/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Early Testing/Lucentia v100-Bravo/Lucentia/scripts/: seed_sample_data.py
Early Testing/Lucentia v100-Bravo/Lucentia/tests/: test_insights_engine.py
backend/: alembic.ini
(+15 files in other folders)
